increase logging in kernel tests
upload json logs; add immediate bpf_log logging as error

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -722,3 +722,12 @@ jobs:
       if: always()
       run: |
         sudo pkill -f qemu-system-x86_64 || true
+
+    - name: Upload kernel-collector dumps
+      if: always()
+      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+      with:
+        name: kernel-collector-dumps-${{ matrix.kernel }}
+        path: |
+          data/*.json
+        if-no-files-found: warn
