--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -698,10 +698,8 @@ jobs:
             --log-console)
           
           echo "Starting kernel collector test..."
+          set +e  # disable exit on error to capture exit status
           docker start -a $container_id
-
-          set +e  # disable exit on error
-          docker wait $container_id
           test_exit_code=$?
           set -e  # re-enable exit on error
           
