feat(reducer): create skeleton matching core

--- a/crates/reducer/Cargo.toml
+++ b/crates/reducer/Cargo.toml
@@ -14,6 +14,7 @@ element-queue = { path = "../element-queue" }
 timeslot = { path = "../timeslot" }
 render_parser = { workspace = true }
 encoder_ebpf_net_aggregation = { path = "../render/ebpf_net/aggregation" }
+encoder_ebpf_net_matching = { path = "../render/ebpf_net/matching" }
 cxx = "1"
 rc-hashmap = { workspace = true }
 otlp_export = { workspace = true }
