--- a/crates/k8s-collector/Cargo.toml
+++ b/crates/k8s-collector/Cargo.toml
@@ -21,3 +21,6 @@ tokio-util = { version = "0.7", features = ["io-util"] }
 [dev-dependencies]
 k8s-openapi = { version = "0.26", features = ["v1_30"] }
 proptest = "1"
+anyhow = "1"
+env_logger = "0.11"
+serde_json = "1"
