--- a/crates/k8s-collector-bin/Cargo.toml
+++ b/crates/k8s-collector-bin/Cargo.toml
@@ -10,4 +10,5 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 k8s-collector = { path = "../k8s-collector" }
+env_logger = "0.11"
 k8s-openapi = { version = "0.26", features = ["v1_30"] }
