build: remove golang from build container

--- a/.github/actions/build-tools-single-stage/action.yml
+++ b/.github/actions/build-tools-single-stage/action.yml
@@ -73,16 +73,15 @@ runs:
         DEPS["base"]=""
         DEPS["libuv"]="base"
         DEPS["cpp_misc"]="base"
-        DEPS["go"]="base"
         DEPS["libmaxminddb"]="base"
         DEPS["libbpf"]="base"
         DEPS["aws_sdk"]="base"
         DEPS["opentelemetry"]="base"
-        DEPS["final"]="base libuv aws_sdk cpp_misc go libmaxminddb opentelemetry libbpf"
+        DEPS["final"]="base libuv aws_sdk cpp_misc libmaxminddb opentelemetry libbpf"
         
         # Compute direct hashes for all directories upfront
         declare -A DIRECT_HASHES
-        ALL_DIRS="base libuv cpp_misc go libmaxminddb libbpf aws_sdk opentelemetry final"
+        ALL_DIRS="base libuv cpp_misc libmaxminddb libbpf aws_sdk opentelemetry final"
         
         echo "Computing direct hashes..." >&2
         for dir in $ALL_DIRS; do
@@ -243,7 +242,6 @@ runs:
         BUILD_ARGS="${BUILD_ARGS} --build-arg base_IMAGE_TAG=${{ steps.compute-recursive-tags.outputs.base_IMAGE_TAG }}"
         BUILD_ARGS="${BUILD_ARGS} --build-arg libuv_IMAGE_TAG=${{ steps.compute-recursive-tags.outputs.libuv_IMAGE_TAG }}"
         BUILD_ARGS="${BUILD_ARGS} --build-arg cpp_misc_IMAGE_TAG=${{ steps.compute-recursive-tags.outputs.cpp_misc_IMAGE_TAG }}"
-        BUILD_ARGS="${BUILD_ARGS} --build-arg go_IMAGE_TAG=${{ steps.compute-recursive-tags.outputs.go_IMAGE_TAG }}"
         BUILD_ARGS="${BUILD_ARGS} --build-arg libmaxminddb_IMAGE_TAG=${{ steps.compute-recursive-tags.outputs.libmaxminddb_IMAGE_TAG }}"
         BUILD_ARGS="${BUILD_ARGS} --build-arg libbpf_IMAGE_TAG=${{ steps.compute-recursive-tags.outputs.libbpf_IMAGE_TAG }}"
         BUILD_ARGS="${BUILD_ARGS} --build-arg aws_sdk_IMAGE_TAG=${{ steps.compute-recursive-tags.outputs.aws_sdk_IMAGE_TAG }}"
