ci: add release-please for triggering releases

--- a/collector/CMakeLists.txt
+++ b/collector/CMakeLists.txt
@@ -22,6 +22,10 @@ build_custom_docker_image(
   DOCKERFILE_PATH ${CMAKE_CURRENT_SOURCE_DIR}
   DOCKERFILE_NAME Dockerfile.k8s-collector
   OUT_DIR srv
+  ARGS
+    "EBPF_NET_MAJOR_VERSION=${EBPF_NET_MAJOR_VERSION}"
+    "EBPF_NET_MINOR_VERSION=${EBPF_NET_MINOR_VERSION}"
+    "EBPF_NET_PATCH_VERSION=${EBPF_NET_PATCH_VERSION}"
   OUTPUT_OF
     k8s-collector-stripped
   BINARIES
